Fixed Alignment #2

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    overflow: hidden;
+    overflow:hidden;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1em;
     color: white;
@@ -10,6 +10,9 @@ body{
     text-align: center;
     top: 50%;
     width: 100%;
+    background-color: black;
+  background-image: url("https://www.transparenttextures.com/patterns/stardust.png");
+  animation: stars 60s linear infinite;
 }
 
 #box1{
@@ -25,13 +28,16 @@ body{
     color: white;
     outline: white;
     opacity: 50%;
- position: fixed;
- margin-top: 0%;
+ position: absolute;
+ margin-bottom: 50%;
+ margin-right: 50%;
  color: white;
  text-align: center;
  transform: translateY(-200px) translateX(-25px);
  animation: SlideInTop 0.5s cubic-bezier(0.33, 1, 0.68, 1);
 }
+
+
 
 .icons_b{
     filter: saturate(0) brightness(10) opacity(50%);
@@ -39,18 +45,19 @@ body{
 
 
 #icon-scratch{
-    position:fixed;
-    margin-top: 0%;
-    margin-left: 25%;
-    transform: translateY(-150px) translateX(-15px);
-    animation: SlideInBottom 0.5s cubic-bezier(0.33, 1, 0.68, 1);
+    position:absolute;
+    margin-left: 50%;
+    margin-bottom: 100%;
+    transform: translateX(-50px) translateY(-300px);
+    animation: SlideInBottom1 0.5s cubic-bezier(0.33, 1, 0.68, 1);
 }
+
 #icon-yt{
-    position:fixed;
-    margin-top: 0%;
-    margin-left: 125px;
-    transform: translateY(-150px) translateX(-15px);
-    animation: SlideInBottom 0.5s cubic-bezier(0.33, 1, 0.68, 1);
+    position:relative;
+    margin-left: 50%;
+    margin-right: 50%;
+    transform: translateX(-10px) translateY(-357px);
+    animation: SlideInBottom2 0.5s cubic-bezier(0.33, 1, 0.68, 1);
 }
 
 
@@ -59,13 +66,28 @@ body{
     opacity: 1;
     filter: saturate(1);
 }
-
+#icon-house:hover{
+    opacity: 1;
+}
 
 @keyframes SlideInTop{
     from{transform: translateY(-150px) translateX(-25px); opacity: 0%;}
     to{transform: translateY(-200px) translateX(-25px); opacity: 50%;}
 }
-@keyframes SlideInBottom{
-    from{transform: translateY(-200px) translateX(-15px) ; opacity: 0%;}
-    to{transform: translateY(-150px) translateX(-15px); opacity: 50%;}
+@keyframes SlideInBottom1{
+    from{transform: translateY(-340px) translateX(-50px) ; opacity: 0%;}
+    to{transform: translateY(-300px) translateX(-50px); opacity: 50%;}
+}
+@keyframes SlideInBottom2{
+    from{transform: translateY(-387px) translateX(-10px) ; opacity: 0%;}
+    to{transform: translateY(-357px) translateX(-10px); opacity: 50%;}
+}
+
+@keyframes stars {
+    0% {
+        background-position: 0 0;
+    }
+    100% {
+        background-position: 0 -798px;
+    }
 }
